package edu.fiuba.algo3.model.Item.RangoItem;

public abstract class RangoItem {

}
