package edu.fiuba.algo3.model.Policia;

public class Policia {

}
