package edu.fiuba.algo3.model.Policia.RangoPolicia;

public abstract class RangoPolicia {

}
